--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "rollup-plugin-terser": "^5.3.0"
   },
   "dependencies": {
-    "igv-widgets": "github:igvteam/igv-widgets#dcb999eb"
+    "igv-widgets": "file:../igv-widgets"
   }
 }
